apps/contitrans/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contitrans
spec:
  replicas: 1
  selector:
    matchLabels:
      app: contitrans
  template:
    metadata:
      labels:
        app: contitrans
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: contitrans
          image: registry.kvlk.hu/contitrans:34-6862827 # {"$imagepolicy": "flux-system:contitrans-policy"}
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8084
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 3
