apps/contitrans/service.yml
apiVersion: v1
kind: Service
metadata:
  name: contitrans-service
spec:
  type: ClusterIP
  selector:
    app: contitrans
  ports:
    - name: contitrans
      port: 80
      targetPort: http
