apps/contitrans/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contitrans-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-http"
    traefik.ingress.kubernetes.io/router.middlewares: |
      ingresses-redirect-www-to-non-www@kubernetescrd,
      kube-system-secure-chain@kubernetescrd
spec:
  tls:
    - hosts:
        - neoline-contitrans.hu
      secretName: contitrans-tls
  rules:
    - host: neoline-contitrans.hu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: contitrans-service
                port:
                  number: 80
