apps/contitrans/networkpolicy.yml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: contitrans
spec:
  endpointSelector:
    matchLabels:
      app: contitrans
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: traefik
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "8084"
              protocol: TCP
